--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "blake-hash": "^1.1.0",
     "blake2b": "^2.1.3",
     "circom": "0.0.35",
-    "snarkjs": "^0.1.20",
+    "snarkjs": ">=0.1.20 <=0.1.24",
     "typedarray-to-buffer": "^3.1.5",
     "web3": "^1.0.0-beta.55"
   },
